deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fettle-ingress
  namespace: fettle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: api.fettle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 20001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fettle-web-admin-ingress
  namespace: fettle
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: admin.fettle.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-admin
            port:
              number: 80
